tests/filled-param/duplicate-parameters.stderr
error: encountered duplicate `filled` parameter: duplicate set to true
 --> tests/filled-param/duplicate-parameters.rs:4:27
  |
4 | #[bitfield(filled = true, filled = true)]
  |                           ^^^^^^^^^^^^^

error: previous `filled` parameter here
 --> tests/filled-param/duplicate-parameters.rs:4:12
  |
4 | #[bitfield(filled = true, filled = true)]
  |            ^^^^^^^^^^^^^
